vlib/v/parser/tests/block_syntax_for_warning.out
vlib/v/parser/tests/block_syntax_for_warning.v:3:2: warning: syntax error, should use `xxx {`
    1 | fn main() {
    2 |     for i in 0..5
    3 |     {
      |     ^
    4 |         println(i)
    5 |     }
